--- a/style.css
+++ b/style.css
@@ -1,23 +1,91 @@
 body {
-    background-color: rgba(33, 5, 60, 0.883);
+  background-color: rgba(33, 5, 60, 0.883);
+  font-family: Roboto;
+  font-weight: bold;
 }
 
 .cipher {
-    color: white;
-    text-align: center;
-    font-size: 40px;
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
 }
 
- /* Encryption */
-.encryption {
-    display: flex;
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
-.info-text {
-    color: white;
-    font-family: 'Roboto';
-    font-size: 20px;
-    text-transform:;
+.message {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
 }
 
+.secret-code {
+  display: flex;
+  width: 70%;
+  gap: 10px;
+}
 
+.encrypt-decrypt-bttns {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  width: 40%;
+}
+
+.encrypt-bttn,
+.decrypt-bttn {
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: inherit;
+  background-color: rgb(10, 105, 194);
+  width: 40%;
+  height: 50%;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
+
+.encrypt-bttn:hover,
+.decrypt-bttn:hover {
+  background-color: lightblue;
+}
+
+.decrypted {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 70%;
+}
+
+.decrypted-message {
+  background-color: white;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.copy-bttn {
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: inherit;
+  background-color: rgb(10, 105, 194);
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
+
+.copy-bttn:hover {
+  background-color: lightblue;
+}/*# sourceMappingURL=style.css.map */
