--- a/message-box.scss
+++ b/message-box.scss
@@ -7,7 +7,7 @@ $gray: #9b9b9b;
   position: relative;
   padding: 15px 0 0;
   margin-top: 10px;
-  width: 100%;
+  width: calc(70% - 10px);
 }
 
 .secretKey-box {
